docs: add Day 18 prerequisites and business scenario notes
Documented prerequisites, business process understanding,
and pre-execution constraints for the Build Your First Process module.
No automation execution performed.

--- a/daily-logs/2026-01-26-day-18.md
+++ b/daily-logs/2026-01-26-day-18.md
@@ -1,1 +1,124 @@
+# Day 18 — 2026-01-26
 
+**Focus:** Build Your First Process — Prerequisites & Business Scenario  
+**Time Spent:** ~2–2.5 hours (theory + guided lab exposure)
+
+---
+
+## 🎯 Purpose of the Day
+
+Today’s objective was **not to build or publish an automation**, but to
+establish **pre-execution clarity** for the *Build Your First Process with Studio* module.
+
+The focus was on:
+- Understanding **mandatory prerequisites**
+- Learning how **business requirements translate into automation scope**
+- Identifying what must be ready *before* workflow construction begins
+- Avoiding execution errors caused by missing setup or unclear process intent
+
+---
+
+## 📘 Course Context
+
+- **Learning Plan:** RPA Developer Foundation (v2021.10)
+- **Module:** Build Your First Process with Studio
+- **Sections Covered:**
+  - Prerequisites
+  - Meet the UiPath Studio Interface (partial)
+  - Understanding the Business Scenario
+- **Execution Status:** Not started (blocked by knowledge check)
+
+---
+
+## 🛠 What I Covered Today
+
+### 1. Prerequisites for the Course
+
+Clarified **non-negotiable setup requirements**:
+
+- **UiPath Studio installed**
+  - Required to:
+    - Create processes
+    - Explore Studio features
+    - Complete exercises in later modules
+- **Microsoft Office installed**
+  - Required for:
+    - Outlook-based email activities
+    - Email automation scenarios used in this course
+
+Key insight:
+> The course assumes these tools are already installed and functional.  
+> Missing prerequisites will cause lab failures later.
+
+---
+
+### 2. Understanding the Business Scenario
+
+Learned how automation work **starts before Studio**:
+
+- Automation begins with understanding the **“as-is” process**
+- Typical enterprise flow:
+  - Business Analyst documents the process
+  - Solution Architect validates feasibility
+  - Business signs off on the Process Definition Document (PDD)
+- In smaller teams or learning contexts:
+  - The **developer performs all three roles**
+
+This course assumes the developer must:
+- Analyze the process
+- Document steps
+- Assess automation potential independently
+
+---
+
+### 3. ACME System 1 (Conceptual Exposure)
+
+- Introduced to **ACME System 1** as the demo application
+- Purpose:
+  - Simulate a real business system
+  - Provide invoices via email
+- Emphasis was on:
+  - Understanding *what* is automated
+  - Not yet *how* it is automated
+
+No execution attempted.
+
+---
+
+## 🧠 Key Observations
+
+- UiPath strongly emphasizes **business-first automation**
+- Workflow construction is meaningless without:
+  - Approved process steps
+  - Clear input/output expectations
+- Studio skills are secondary to **process understanding**
+- The course intentionally delays execution to prevent blind automation
+
+---
+
+## ⚠️ Constraints & Assumptions
+
+- Knowledge check must be passed before progressing
+- Course assumes:
+  - Studio is already installed
+  - Outlook is available and configured
+- Execution steps depend on:
+  - Correct platform setup
+  - Prior understanding of Orchestrator concepts
+
+---
+
+## 📌 Outcome
+
+- Prerequisites validated conceptually
+- Business context for automation clearly understood
+- No false execution or progress claimed
+- Ready to proceed to:
+  - Workflow construction (Part One) **after** clearing the knowledge check
+
+---
+
+## 🤖 AI Assistance Disclosure
+
+AI tools were used only for writing clarity.
+All learning, interpretation, and technical judgment are my own.
